[tool.poetry]
name = "test-for dfa media"
version = "0.1.0"
description = ""
authors = ["kirill.novgorodtsev <cmyser.fast@mail.ru>"]
readme = "README.md"
packages = [{include = "test_for dfa media"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.7"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
